# DigitSynth

./: .gitignore  README.md  chord_manager_test  install-deps.sh  midi-thread-scope.md
.github/workflows/: c-cpp.yml  ci-cd.yaml  main.yml  release.yml  unit-tests.yml
DigitSynth-Schematic/: ADC_Flex.kicad_sch  Buttons.kicad_sch  DigitSynth.kicad_pro  DigitSynth.kicad_sch  LEDs.kicad_sch  RPInterface.kicad_sch
GloveMechanicalDesign/: hinge.scad  main.scad
application/: .gitignore  CMakeLists.txt  README.md  log
application/include/: ChordManager.hpp  FlexDSP.hpp  ILedDriver.hpp  LedController.hpp  MockPattern.hpp  MockTLC59711.hpp  SynthController.hpp  TLC59711.h  adc-driver.h  button-driver.h  flex-sensor.h  foo.h  gpio.h  led-driver.h  midi-driver.hpp  patterns.h  publisher.h  spi.h  subscriber.h  types.h
application/src/: ChordManager.cpp  FlexDSP.cpp  LedController.cpp  LedController.hpp  MidiScaler.cpp  SynthController.cpp  TLC59711.cpp  adc-driver.cpp  button-driver.cpp  flex-sensor.cpp  foo.cpp  gpio.cpp  led-driver.cpp  main.cpp  midi-driver.cpp  patterns.cpp  spi.cpp  synth-controller.cpp  voltage-scaler.cpp
application/test/: CMakeLists.txt  test_TLC.cpp  test_adc-driver.cpp  test_button-driver.cpp  test_flex-sensor.cpp  test_foo.cpp  test_spi.cpp  test_subscriber_publisher.cpp  test_voltage-scaler.cpp
application/test/mocks/: MockPattern.hpp
application/test/synth_logic/: combined_test.cpp  integrated_test.cpp  led_controller_test.cpp  lfo_manager_test.cpp  midi_flex_test.cpp
design/: README.md
design/software/: midi_driver.hpp
design/software/adc/: uml.drawio
research/: README.md
research/io/: adc.md
src/: MidiTypes.hpp
