cmake_minimum_required(VERSION 3.23)

enable_testing()

add_executable(test_foo test_foo.cpp)
add_executable(test_subscriber_publisher test_subscriber_publisher.cpp)
target_include_directories(test_foo PRIVATE include)
target_include_directories(test_subscriber_publisher PRIVATE include)
target_link_libraries(test_foo digitsynth_static)
target_link_libraries(test_subscriber_publisher digitsynth_static)
add_test(NAME TestFoo COMMAND test_foo)
add_test(NAME TestSubscriberPublisher COMMAND test_subscriber_publisher)
